Mon Jun 24 10:40:37 CEST 2013
Replaced 'get-MLED.sh' by 'install-MLED.sh'. This new script makes installing
MLED even more simple. Instead of downloading everything using wget and
installing the package collection using upgradepkg --reinstall --install-new,
we just parse the 'build_order' script and use slackpkg to install everything. 
Updated the documentation in 'MLED-14.0-*/README.txt' to reflect these changes.
Added a section about managing MLED with slackpkg+ and fixed a few typos.
Thanks to zakame, rinias and Bertman123 on LQ.
+--------------------------+
Mon Jun 24 08:49:54 CEST 2013
patches/ffmpeg-0.11.1-x86_64-2_microlinux.txz: Rebuilt.
  Fixed inconsistent $ARCH field in the package name, which made the package
	fly under slackpkg's radar ;o)
+--------------------------+
Sat Jun 22 08:50:20 CEST 2013
extra/virtualbox-kernel-4.1.24_3.2.29-x86_64-1_microlinux.txz: Removed.
	When the virtualbox-kernel-4.1.24_3.2.45 package is installed, slackpkg+
	attempts to "upgrade" it with this older version. So let's just remove it.
+--------------------------+
Thu Jun 20 18:56:59 CEST 2013
extra/filezilla-3.7.1-x86_64-1_microlinux.txz: Added.
extra/poedit-1.4.6.1-x86_64-1_microlinux.txz: Added.
+--------------------------+
Thu Jun 20 12:22:21 CEST 2013
extra/virtualbox-4.1.24-x86_64-1_microlinux.txz: Added.
extra/virtualbox-kernel-4.1.24_3.2.29-x86_64-1_microlinux.txz: Added.
extra/virtualbox-kernel-4.1.24_3.2.45-x86_64-1_microlinux.txz: Added.
+--------------------------+
Wed Jun 19 10:24:12 CEST 2013
extra/mutagen-1.21-x86_64-1_microlinux.txz: Added.
extra/gst-python-0.10.22-x86_64-1_microlinux.txz: Added.
extra/exaile-3.3.1-x86_64-1_microlinux.txz: Added.
+--------------------------+
Tue Jun 18 13:53:57 CEST 2013
mozilla-firefox-17.0.6-x86_64-1_microlinux.txz: Upgraded.
mozilla-firefox-l10n-17.0.6-x86_64-1_microlinux.txz: Upgraded.
user-settings-firefox-17.0.6-x86_64-1_microlinux.txz: Upgraded.
mozilla-thunderbird-17.0.6-x86_64-1_microlinux.txz: Upgraded.