@@ -1,6 +1,0 @@
-############
-# Packages #
-############
-*.txz
-*.tgz
-
